  21 Jul 2015; Stefan Junker <mail@stefanjunker.de> rkt-9999.ebuild:
  >=app-emulation/rkt-0.7: download coreos img with portage

*rkt-0.7.0-r1 (17 Jul 2015)

  17 Jul 2015; Stefan Junker <mail@stefanjunker.de> +rkt-0.7.0-r1.ebuild,
  -rkt-0.7.0.ebuild, rkt-9999.ebuild:
  app/emulation-rkt: change dependencies and default stage1 flavor

*rkt-0.5.5 (15 Jul 2015)
*rkt-0.7.0 (15 Jul 2015)

  15 Jul 2015; Stefan Junker <mail@stefanjunker.de> +rkt-0.5.5.ebuild,
  +rkt-0.7.0.ebuild, metadata.xml, rkt-9999.ebuild:
  app-emulation/rkt: version bumps and refactoring  Upstream rkt has switched
  from a custom buildsystem to autotools.

*rkt-0.5.6 (30 May 2015)

  30 May 2015; Stefan Junker <code@stefanjunker.de> +rkt-0.5.6.ebuild,
  -rkt-0.5.4.ebuild:
  app-emulation/rkt: version bump 0.5.6

  20 May 2015; Stefan Junker <code@stefanjunker.de> rkt-9999.ebuild:
  rkt: Cleanup ebuild

*rkt-9999 (04 May 2015)

  04 May 2015; Stefan Junker <code@stefanjunker.de> +files/rkt-metadata.service,
  +files/rkt-metadata.socket, +rkt-9999.ebuild, metadata.xml:
  app-emulation/rkt: use git-r3 eclass and add metadata-service units

  24 Apr 2015; Stefan Junker <code@stefanjunker.de> rkt-0.5.4.ebuild:
  app-emulation/rkt-0.5.4: pass stage1.aci to build script to make rkt binary
  work without extra arguments.

*rkt-0.5.4 (24 Apr 2015)

  24 Apr 2015; Stefan Junker <code@stefanjunker.de> +rkt-0.5.4.ebuild:
  rkt version bump to 0.5.4