@@ -1,10 +1,6 @@
-AUX rkt-metadata.service 242 SHA256 4e853c216abb6c6ab732a7554aa192057b70bfa671323c98d1f58163c4b4478f SHA512 32e7eb44def072ef82a18e5d315d46d4f42b096d478f6373746be84d580e7a69df74f34f99d0fd22333135300b38a5cbf8ff6ce9319d6ebc5c4b790ef018538d WHIRLPOOL fb6cba52bb8f4a8240282775cdc0eb0af8a82c9fbdd6473d5c418265198d1ec1f7de9dbec5ee727f4477d043874669acce9796359df748d13313d8be56f57a79
-AUX rkt-metadata.socket 227 SHA256 618b37860305914df77fbb0312e7ff54d9fc0c1b5b682d4cd1163fc07ec5553d SHA512 fa9044246b99161ed5903047e7b2d9c3f55d944889f263a7646d86d76ebbaf3ec86f6cd4ae2dfc5aa92169b2ac96c9dc6dbbe62ffa4437e504c539dc2b7f1600 WHIRLPOOL 3eb8f97cfb96f99b803148caa23c6882b1db6911209079a54a5aa63be27ac70adc3842be46ddca232eb547789d8b14c488fe672b56f4c3f48ec0194914cffc69
-DIST rkt-0.5.6.tar.gz 1186043 SHA256 bae39568c9e980245b13309ba89eac1f31ba8e29d7ccf3e0f85b75c34ae57a7d SHA512 cbd69991d880a5cddecfd4afdbc81c8508661cd5ba9880eff322314f1ab840676a2db36061b8624336fb15f8a270818bf799a28ae6b51982d3df71842845bdd3 WHIRLPOOL 1b8027bd28b78b8d26ff29ad286be76c37fb6a5c2da0f8b764d20960dd0f0f4ae7cf5798fe1c04549c9ad453cd3434f70a8f2ccc38192e1c5cce57da4a42af4f
-DIST rkt-pxe-709.0.0.img 148919232 SHA256 d0df52bee7134fdeb6bc4d973e7ff651979894c0895423e2e9a0dd35279e7c3b SHA512 dc2f70eb29ebfe32b66201fc7fe3a343eee66feb2ad5fa1635bb4a979252440e378d28496f567e8a7761942a9e42e1f846626626e81ec9be38f4980cd4a8db99 WHIRLPOOL 72960971ad2e97e13305b0c21496b306c43185aee94c369d2ce3aad522701926a9cb0fbbd250b789f4beadbda3f872ea1a007943545279c0d904c673cc32fd93
+DIST rkt-0.8.0.tar.gz 1749853 SHA256 c9eb0126b8ff2f059d7cedaab17ca73dce256f342092c9bf4a7ae20661f2a5aa SHA512 4e2c27fb40cd3d27de062631105db3ea04ed902f48abb647a8e4de249478dd8a145ac0b77fd5b261cc680df1bcaa4067accb8a597def9b3963108e2c1f3d9d5a WHIRLPOOL f65ddd8908ec30cfefa06e60cd4d8cdb2099ab279b6350790eb3e436b88c792efe28cea53569f48d42f6eec682635a4212f16fea9d184e6baa97877a643e1106
 DIST rkt-pxe-738.1.0.img 151780780 SHA256 805a4c491281553c8927f3dd1a7bec50cca29209d0a7264870e7155d794ecbe6 SHA512 7774cc64dfa874f08f48cba0c15103e9eca86ffd87dcb24f765a9b56074e72f6862a663a4007a0a7dd296740ae91bf4edf7290fa35659b0b1572fe2f5dad3256 WHIRLPOOL 5973a6036d650c576bb0bd365c8c9ea35776501c1fd2baf1d7c00d06496fab35e9c796096ef89b095e7a922e2062dce6c0d1c85cd3101022e0aca84277d18cb9
-EBUILD rkt-0.5.6.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-EBUILD rkt-0.7.0.ebuild 2705 SHA256 25c3b3202caade918f22499122ad0f5806bbc506798e635c01fbe2fdc783557d SHA512 ba1358ca5228d69bd80537ddfcf226b73ac391fcd5947d37b4aa574e57ea9308ad92863c32267cdb2698d76ed4361a2cb9a5fab1c859464e03787232555b3c96 WHIRLPOOL f2379bbaef8fbe096b76175247f0c83b63d7b3f26bbfa48cb184059ee1ab88fb0307e3fcaf254d1958480b25d90907f4dd9264d0d79614977ca2bc556454c8eb
-EBUILD rkt-9999.ebuild 2700 SHA256 99cba4f4f4b3be2cd644e50769586ea036163c6f7cf17a6deb1a32f4da08b43a SHA512 aa1a717f63f566c1b0b8483361fd27f4a28b217eddf196ce8056138aa5b44b733c1bdd7d3a9496733d727930bc88546c7468bcdc53ac4fc4e39a51f6e776c313 WHIRLPOOL 77b28938996b1c7d59be00eb088c3ff4e6a52beeefb14189e6d727c5841099d715ce55a0681350252790643746de8a8d55b142c05ebe08074b3125a9cac1e728
-MISC ChangeLog 1430 SHA256 b23044d3525d4fc241f0589d796eb08d325139048fcbeb01eb8dcfa10da66e03 SHA512 90eccdfa79da7b0fa564a7800479ee4bd65adbf5a9f2271fc2235fbfb580654419e0c67427f50270d8c52a2b0137478d41ad1759935703f3c60fb468057058a6 WHIRLPOOL 64e251e9df36ed47681ce7d7b0509546dda2906745c5068af0e3b0715288c8878aebef8779c908204250b735949cb158d23918bc3d7342e9778549c6e3f8e83f
+EBUILD rkt-0.8.0.ebuild 2343 SHA256 3da5cb66e29c70aeed55d3a569bbb96008e8f908c1bde3db993c2ac3eb541e9d SHA512 0bec02e91a7336dbf805e9b0b5656ab14ba81abe427982fb9f39de5b37e82b20b37028b80f241d2acb63e2f8f0f25a2185171da57583434f737c1b9f99ee4ea0 WHIRLPOOL e379c4d7bc9ff2db23b15b3c313e5f2b8f782762f1fb64cd779c9b93598edb80543278f0e3d8abfa75af7f3f9f8da20458a499ff2ce1d0ae621fbf59d286ba39
+EBUILD rkt-9999.ebuild 2527 SHA256 fbf5ceb93aae11fe6418be0aa2920e386a2941e5d1ed586cb51bfddb67fc4ea6 SHA512 5600701f5601a63e837b2d1da34eb305866cb3e4d5fb8c99757ad5bf8d79e07ff47310b0cac54f4cf76a2a32b3dbfa4849fa89129c8b0ba039a165d7ace96ec4 WHIRLPOOL b2eb40d86f550d3af3713be15a6b6464c576bb35d164ba676cd9bac3745500362677e5da04fe449b01903bee1f261f18691c6f75ac94d28dab016c5a5ac75ac5
+MISC ChangeLog 1851 SHA256 331bf56f80f281bea42f1967bd0456140f2c130fe8f8a69cd374461ffdd315d7 SHA512 c65ba2a5ccab28be3f315b736b1f597f73e22cdaa7fb1eee2289ac495e2d0a896198fe53c13400eb4bfe25441a8d822bc2e2cd1fa5d83bb958c6c3e9c3eae0ac WHIRLPOOL 35058655efc59f266de8608087235769bddddd4b921c0d91dc94d3907bf281fdfaa1e2870c35b647b7883c2edd51b7e7c8e9ec99e4c46fb559f77a4474d316b8
 MISC metadata.xml 834 SHA256 e1e716d2037be870a722e03b1da407f1cabcccc9d717c44d714469f1c489833f SHA512 9eb76a0163a202cadc08c17d945bfc5aa530c90f7215542592f893cd8d297d51aa5e6e683dfa2a46cd3615aebee4d80a5f0488e77a9af4d6f91352cdb98a1b65 WHIRLPOOL f9cc37c5e2243b01af2ff82933c6a309430254c20ebb251c1adedbfe70e6dd2c8909c1c6cf455cbb0db5309ad675440585b74a0cce2ca925bf80d818ac9f008f
