@@ -1,11 +1,0 @@
-[Unit]
-Description=rkt metadata service
-Documentation=http://github.com/coreos/rkt
-After=network.target rkt-metadata.socket
-Requires=rkt-metadata.socket
-
-[Service]
-ExecStart=/usr/bin/rkt metadata-service
-
-[Install]
-WantedBy=multi-user.target
