@@ -1,13 +1,0 @@
-[Unit]
-Description=rkt metadata service socket
-PartOf=rkt-metadata.service
-
-[Socket]
-ListenStream=/run/rkt/metadata-svc.sock
-SocketMode=0660
-SocketUser=root
-SocketGroup=root
-RemoveOnStop=true
-
-[Install]
-WantedBy=sockets.target
